@startuml quan_ly_xe
skinparam groupInheritance 3

package TransportationFactory <<Folder>>{

    class Transportation{
        + int: Capacity
        + int: Size
        + string: TypeOfFuel
        # VehicleStatus: Status
        + string: License
        + string: Brand
        + DateTime: DateTime
        + DateTime: WarrantyTime
        + DateTime[]: WarrantyHis
        + Journey: JourneyInCharge
        + DisplayInfo()
    }

    class Car{
    }

    class Truck{
    }

    class Coach {
    }
}

enum VehicleStatus{
    1: Active
    2: UnderMaintainace
    3: NotActive
}
class Driver{
    + string: Name
    + string: PhoneNumber
    + string: Address
    - string: Account
    - string: Password
    + string: Licens
    + Quality: DrivingExperience
    + Journey: JourneyInCharge
    + Journey: JourneyList
    + DisplayInfo()
    + CompleteJourney() 
}

class Journey{
    + Transportation: Vehicle
    + Driver: DriverInCharge
    + double: Kilomet
    + double: Price
    + string: StartLocation
    + string: EndLocation
    + string: License
    - int: Status
    + string: Time
    + DisplayInfo()
}

note top of Journey
Status:
0: chưa đủ điều kiện khởi hành, 
1 là đủ điều kiện khởi hành và đang đi, 
2 là đã hoàn thành chuyến đi
end note

class Admin <<Singleton>>{
    - string: Account
    - string: Password
    --
    + AddNewVehicle()
    + DeleteVehicle()
    + UpdateVehicle()
    + DisplayVehicle()

    + AddNewDriver()
    + DeleteDriver()
    + UpdateDriver()
    + DisplayDrive()
    
    + AddJourney()
    - CalPrice()
    + CheckForWarranty()
    + CheckIncome()
}

enum Quality{
    1, 2, 3
}

note bottom of Quality
1 (tương đương bằng B) lái đc car 
2 (tương đương bằng C) lái đc truck, (và car)
3 (tương đương bằng D) lái đc coach (và car, truck)
end note

Transportation <|-- Truck
Transportation <|-- Car
Transportation <|-- Coach
Driver -right- Quality
Driver "1"-down- "*"Journey
VehicleStatus -up- Transportation
Admin -down[dashed]-> Transportation: Adds & Updates & Assign for Journey
Admin -left[dashed]-> Driver: Adds & Journey assignment
Journey <-right[dashed]- Admin: Create
Transportation -left- Journey
@enduml